# jvmti-rs

./: .gitignore  Cargo.toml  README.md
example/: HelloWorld.java  README.md  log.yaml
example/example-rs/: Cargo.toml
example/example-rs/src/: export.rs  lib.rs
src/: lib.rs
src/perf/: mod.rs
src/sys/: capabilities.rs  cmlr.rs  constant.rs  jvmtienv.rs  mod.rs  type.rs  utils.rs
src/wrapper/: decoder.rs  errors.rs  jvmtienv.rs  macros.rs  mod.rs  runner.rs  utils.rs  vm.rs
src/wrapper/builder/: builder.rs  compiled_method_record.rs  const_object_builder.rs  mod.rs  mut_object_builder.rs
src/wrapper/descriptors/: class_desc.rs  desc.rs  exception_desc.rs  field_desc.rs  method_desc.rs  mod.rs
src/wrapper/enums/: class_status.rs  error.rs  event.rs  event_mode.rs  heap_filter.rs  heap_object_filter.rs  heap_reference_kind.rs  heap_root_kind.rs  iteration_control.rs  jlocation_format.rs  mod.rs  object_reference_kind.rs  param_kind.rs  param_types.rs  phase.rs  primitive_type.rs  resource_exhausted.rs  thread_priority.rs  thread_state.rs  thread_state_java_lang.rs  timer_kind.rs  verbose_flag.rs  version_interface.rs  version_mask.rs  version_shift.rs  visit.rs
src/wrapper/event/: callbacks.rs  handler.rs  macros.rs  manager.rs  mod.rs  types.rs
src/wrapper/facade/: breakpoint.rs  breakpoint_instance.rs  breakpoint_static.rs  capability.rs  class.rs  class_jni.rs  class_loader_search.rs  event_management.rs  extension_mechanism.rs  field.rs  field_instance.rs  field_static.rs  force_early_return.rs  general.rs  heap.rs  heap_1_0.rs  heap_1_0_jni.rs  (+17 more)
(+75 files in other folders)
